Fix arrows in Firefox
Truncate label text in Chrome/Safari

--- a/app/components/sortby-dropdown/styles.scss
+++ b/app/components/sortby-dropdown/styles.scss
@@ -10,3 +10,11 @@
     cursor: pointer;
     cursor: hand;
 }
+
+.display-text {
+    display: block;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: 100%;
+}
